--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background-color: #282c34;
+}
+
+html {
+  height: 100%;
+}
+
 .App {
+  height: 100%;
   text-align: center;
+}
+
+#root {
+  height: 100%;
 }
 
 .App-logo {
@@ -13,26 +33,84 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.app-title {
+  height: 10%;
+  width: 100%;
+  margin: 15px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.info-section {
+  height: 80%;
+}
+
+.division-results-section,
+.requests-section {
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+}
+
+tr {
+  display: flex;
+  justify-content: space-around;
+  width: 500px;
+}
+
+.machine-symbols {
+  margin: 15px 0;
+}
+
+.info-section {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.requested-button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.requested-button:hover {
+  background-color: #6cb06f;
+}
+
+.division-button {
+  background-color: #008cba;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.division-button:hover {
+  background-color: #4198b5;
+}
+
+.division-button:disabled {
+  cursor: not-allowed !important;
+  background-color: #7d888c !important;
 }
